--- a/pom.xml
+++ b/pom.xml
@@ -62,8 +62,9 @@
 
     <modules>
         <module>dollar-core</module>
-        <module>dollar-examples</module>
         <module>dollar-plugins</module>
+        <module>dollar-runtime</module>
+        <module>dollar-examples</module>
     </modules>
 
     <dependencies>
