--- a/circle.yml
+++ b/circle.yml
@@ -45,6 +45,6 @@ deployment:
 #        - mvn versions:commit
         - mvn -Dgpg.passphrase=${GPG_PASSPHRASE} clean install deploy
         - pack/pack.sh
-        - pack/upload.sh
+        - pack/upload.sh 0.0.${CIRCLE_BUILD_NUM}
         - mvn site:site site:stage
         - mvn scm-publish:publish-scm
