--- a/dollar-runtime/pom.xml
+++ b/dollar-runtime/pom.xml
@@ -42,6 +42,11 @@
             <groupId>org.apache.maven</groupId>
             <version>3.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit-dep</artifactId>
+            <version>4.8.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
