--- a/dollar-runtime/pom.xml
+++ b/dollar-runtime/pom.xml
@@ -33,7 +33,17 @@
             <version>0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.jcabi</groupId>
+            <groupId>me.neilellis</groupId>
+            <artifactId>dollar-metrics-plugin</artifactId>
+            <version>0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>me.neilellis</groupId>
+            <artifactId>dollar-spark-plugin</artifactId>
+            <version>0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+        <groupId>com.jcabi</groupId>
             <artifactId>jcabi-aether</artifactId>
             <version>0.10.1</version>
         </dependency>
@@ -41,11 +51,6 @@
             <artifactId>maven-core</artifactId>
             <groupId>org.apache.maven</groupId>
             <version>3.1.1</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit-dep</artifactId>
-            <version>4.8.2</version>
         </dependency>
     </dependencies>
     <build>
