--- a/dollar-runtime/pom.xml
+++ b/dollar-runtime/pom.xml
@@ -52,6 +52,13 @@
             <groupId>org.apache.maven</groupId>
             <version>3.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>openjdk</groupId>
+            <artifactId>tools</artifactId>
+            <version>1.8</version>
+            <scope>compile</scope>
+            <systemPath>${project.basedir}/../lib/tools.jar</systemPath>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
