--- a/circle.yml
+++ b/circle.yml
@@ -45,7 +45,8 @@ deployment:
         - mvn versions:lock-snapshots
 #        - mvn versions:commit
         - mvn -Dgpg.passphrase=${GPG_PASSPHRASE} clean install deploy
+        - ./build-docs.sh
         - pack/pack.sh
         - pack/upload.sh 0.0.${CIRCLE_BUILD_NUM}
-        - mvn site:site site:stage
+#        - mvn site:site site:stage
         - mvn scm-publish:publish-scm
