--- a/dollar-runtime/pom.xml
+++ b/dollar-runtime/pom.xml
@@ -44,6 +44,21 @@
         </dependency>
         <dependency>
             <groupId>me.neilellis</groupId>
+            <artifactId>dollar-class-resolver-plugin</artifactId>
+            <version>0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>me.neilellis</groupId>
+            <artifactId>dollar-github-resolver-plugin</artifactId>
+            <version>0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>me.neilellis</groupId>
+            <artifactId>dollar-maven-resolver-plugin</artifactId>
+            <version>0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>me.neilellis</groupId>
             <artifactId>dollar-script</artifactId>
             <version>0-SNAPSHOT</version>
         </dependency>
