--- a/dollar-script/pom.xml
+++ b/dollar-script/pom.xml
@@ -47,5 +47,16 @@
             <artifactId>dollar-metrics-plugin</artifactId>
             <version>0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>me.neilellis</groupId>
+            <artifactId>dollar-class-resolver-plugin</artifactId>
+            <version>0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.pegdown</groupId>
+            <artifactId>pegdown</artifactId>
+            <version>1.4.2</version>
+        </dependency>
     </dependencies>
 </project>
