--- a/dollar-core/pom.xml
+++ b/dollar-core/pom.xml
@@ -87,6 +87,11 @@
             <artifactId>github-api</artifactId>
             <version>1.59</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.4</version>
+        </dependency>
 
 
     </dependencies>
