--- a/dollar-runtime/pom.xml
+++ b/dollar-runtime/pom.xml
@@ -62,6 +62,10 @@
             <artifactId>dollar-script</artifactId>
             <version>0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-quartz</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
