--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,11 @@
                 <artifactId>camel-test</artifactId>
                 <version>2.14.0</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.camel</groupId>
+                <artifactId>camel-weather</artifactId>
+                <version>2.14.0</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
