--- a/dollar-runtime/pom.xml
+++ b/dollar-runtime/pom.xml
@@ -39,6 +39,11 @@
         </dependency>
         <dependency>
             <groupId>me.neilellis</groupId>
+            <artifactId>dollar-redis-plugin</artifactId>
+            <version>0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>me.neilellis</groupId>
             <artifactId>dollar-spark-plugin</artifactId>
             <version>0-SNAPSHOT</version>
         </dependency>
