--- a/dollar-script/pom.xml
+++ b/dollar-script/pom.xml
@@ -44,6 +44,11 @@
         </dependency>
         <dependency>
             <groupId>me.neilellis</groupId>
+            <artifactId>dollar-redis-plugin</artifactId>
+            <version>0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>me.neilellis</groupId>
             <artifactId>dollar-metrics-plugin</artifactId>
             <version>0-SNAPSHOT</version>
         </dependency>
