URI work and module work also clean up refactoring and error handling.

--- a/dollar-plugins/pom.xml
+++ b/dollar-plugins/pom.xml
@@ -33,6 +33,7 @@
         <module>dollar-spark-plugin</module>
         <module>dollar-metrics-plugin</module>
         <module>dollar-camel-plugin</module>
+        <module>dollar-http-plugin</module>
         <module>dollar-maven-resolver-plugin</module>
         <module>dollar-github-resolver-plugin</module>
         <module>dollar-class-resolver-plugin</module>
