--- a/dollar-plugins/dollar-class-resolver-plugin/pom.xml
+++ b/dollar-plugins/dollar-class-resolver-plugin/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>dollar-core</artifactId>
             <version>0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>me.neilellis</groupId>
+            <artifactId>dollar-script</artifactId>
+            <version>0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
