--- a/circle.yml
+++ b/circle.yml
@@ -21,8 +21,6 @@ dependencies:
   override:
     - echo ""
 
-test:
-  post:
 
 deployment:
   staging:
@@ -44,7 +42,7 @@ deployment:
         - mvn versions:resolve-ranges
         - mvn versions:lock-snapshots
 #        - mvn versions:commit
-        - mvn -X -Dgpg.passphrase=${GPG_PASSPHRASE} clean install deploy
+        - mvn -Dgpg.passphrase=${GPG_PASSPHRASE} clean install deploy
         - ./build-docs.sh
         - pack/pack.sh
         - pack/upload.sh 0.0.${CIRCLE_BUILD_NUM}
