Module improvements and fixes

--- a/pom.xml
+++ b/pom.xml
@@ -380,8 +380,8 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.11</version>
                 <configuration>
-                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                    <jvm>${JAVA.EXE}</jvm>
+                    <!--<redirectTestOutputToFile>true</redirectTestOutputToFile>-->
+                    <!--<jvm>${JAVA.EXE}</jvm>-->
                     <includes>
                         <include>**/*Test.java</include>
                     </includes>
