--- a/pom.xml
+++ b/pom.xml
@@ -209,7 +209,7 @@
                 <artifactId>maven-surefire-report-plugin</artifactId>
                 <version>2.14</version>
                 <configuration>
-                    <aggregate>true</aggregate>
+                    <!--<aggregate>true</aggregate>-->
                 </configuration>
             </plugin>
             <plugin>
