--- a/circle.yml
+++ b/circle.yml
@@ -17,7 +17,7 @@ dependencies:
 #    - sudo apt-get install -y gpg
     - ./gen-key.sh ${GPG_PASSPHRASE}
     - envsubst < settings.xml > ~/.m2/settings.xml
-    - "(mvn -Dgpg.passphrase=${GPG_PASSPHRASE} clean package -Dmaven.test.skip || : ) &> /dev/null"
+    - "(mvn -Dgpg.passphrase=${GPG_PASSPHRASE} clean compile -Dmaven.test.skip || : ) &> /dev/null"
     - echo "login=neilellis" > ~/.github
     - echo "password=${GITHUB_PASSWORD}" >> ~/.github
   override:
