--- a/circle.yml
+++ b/circle.yml
@@ -46,6 +46,7 @@ deployment:
 #        - mvn versions:commit
         - mvn -Dgpg.passphrase=${GPG_PASSPHRASE} install deploy
         - ./build-docs.sh
+          timeout: 240
         - pack/pack.sh
         - pack/upload.sh 0.0.${CIRCLE_BUILD_NUM}
 #        - mvn site:site site:stage
