--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,12 @@
                 <groupId>com.github.oxo42</groupId>
                 <artifactId>stateless4j</artifactId>
                 <version>2.5.0</version>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>slf4j-jdk14</artifactId>
+                        <groupId>org.slf4j</groupId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.apache.maven</groupId>
