--- a/circle.yml
+++ b/circle.yml
@@ -45,7 +45,8 @@ deployment:
         - mvn versions:lock-snapshots
 #        - mvn versions:commit
         - mvn -Dgpg.passphrase=${GPG_PASSPHRASE} install deploy
-        - ./build-docs.sh
+        - ./build-docs.sh:
+            timeout: 240
         - pack/pack.sh
         - pack/upload.sh 0.0.${CIRCLE_BUILD_NUM}
 #        - mvn site:site site:stage
