--- a/dollar-script/pom.xml
+++ b/dollar-script/pom.xml
@@ -28,6 +28,11 @@
     <artifactId>dollar-script</artifactId>
     <dependencies>
         <dependency>
+            <artifactId>dollar-std-resources-plugins</artifactId>
+            <groupId>me.neilellis</groupId>
+            <version>0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.jparsec</groupId>
             <artifactId>jparsec</artifactId>
             <version>2.1</version>
@@ -81,6 +86,7 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.7</version>
         </dependency>
+
     </dependencies>
 
     <repositories>
