--- a/pom.xml
+++ b/pom.xml
@@ -384,13 +384,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.11</version>
+                <version>2.18</version>
                 <configuration>
                     <!--<redirectTestOutputToFile>true</redirectTestOutputToFile>-->
                     <!--<jvm>${JAVA.EXE}</jvm>-->
                     <includes>
                         <include>**/*Test.java</include>
                     </includes>
+                    <forkCount>3</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024m</argLine>
                     <parallel>methods</parallel>
                     <threadCount>10</threadCount>
                 </configuration>
