--- a/dollar-docs/src/main/webapp/_config.yml
+++ b/dollar-docs/src/main/webapp/_config.yml
@@ -2,9 +2,7 @@
 title: Dollar
 email: hello@neilellis.me
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  DollarScript and the DollarAPI - getting things done on the JVM.
 baseurl: "/dollar/" # the subpath of your site, e.g. /blog/
 url: "http://neilellis.github.io/" # the base hostname & protocol for your site
 twitter_username: neilellis
