--- a/circle.yml
+++ b/circle.yml
@@ -41,7 +41,7 @@ deployment:
     commands:
         - git config --global user.email "neil@cazcade.com"
         - git config --global user.name "Neil Ellis"
-        - mvn versions:set -DnewVersion=0.0.${CIRCLE_BUILD_NUM}
+        - mvn versions:set -DnewVersion=0.1.0-r{CIRCLE_BUILD_NUM}
         - mvn versions:resolve-ranges
         - mvn versions:lock-snapshots
 #        - mvn versions:commit
@@ -49,6 +49,6 @@ deployment:
         - ./build-docs.sh:
             timeout: 360
         - pack/pack.sh
-        - pack/upload.sh 0.0.${CIRCLE_BUILD_NUM}
+        - pack/upload.sh 0.1.0 ${CIRCLE_BUILD_NUM}
 #        - mvn site:site site:stage
 #        - mvn scm-publish:publish-scm
