Switching to Jekyll ;-)

--- a/circle.yml
+++ b/circle.yml
@@ -41,7 +41,7 @@ deployment:
     commands:
         - git config --global user.email "neil@cazcade.com"
         - git config --global user.name "Neil Ellis"
-        - mvn versions:set -DnewVersion=0.1.0-r{CIRCLE_BUILD_NUM}
+        - mvn versions:set -DnewVersion=0.1.0-r${CIRCLE_BUILD_NUM}
         - mvn versions:resolve-ranges
         - mvn versions:lock-snapshots
 #        - mvn versions:commit
