General tooling and planning integration.

--- a/circle.yml
+++ b/circle.yml
@@ -26,6 +26,7 @@ dependencies:
     - echo "login=neilellis" > ~/.github
     - echo "password=${GITHUB_PASSWORD}" >> ~/.github
     - gem install jekyll
+    - npm install -g github-changes
 
 
 
@@ -37,7 +38,8 @@ deployment:
           - git clean -fd
           - git checkout master
           - git pull origin master
-          - git merge staging -m "Auto merge after testing."
+          - github-changes -o neilellis -r dollar -a
+          - git merge staging -m "Auto merge after testing and CHANGELOG update."
           - git push origin master
 
   production:
