General tooling and planning integration.

--- a/circle.yml
+++ b/circle.yml
@@ -38,7 +38,7 @@ deployment:
           - git clean -fd
           - git checkout master
           - git pull origin master
-          - github-changes -o neilellis -r dollar -a
+          - github-changes -o neilellis -r dollar
           - git merge staging -m "Auto merge after testing and CHANGELOG update."
           - git push origin master
 
