--- a/circle.yml
+++ b/circle.yml
@@ -34,7 +34,7 @@ deployment:
   staging:
         branch: staging
         commands:
-          - git config --global user.email "neil@cazcade.com"
+          - git config --global user.email "hello@neilellis.me"
           - git config --global user.name "Neil Ellis"
           - git reset HEAD --hard
           - git clean -fd
