General tooling and planning integration.

--- a/circle.yml
+++ b/circle.yml
@@ -41,7 +41,8 @@ deployment:
           - git checkout master
           - git pull origin master
           - github-changes -o neilellis -r dollar -v
-          - git merge staging -m "Auto merge after testing and CHANGELOG update."
+          - git commit -m -a "Change log updates"
+          - git merge staging -m "Auto merge"
           - git push origin master
 
   production:
