--- a/circle.yml
+++ b/circle.yml
@@ -54,6 +54,8 @@ deployment:
   production:
     branch: master
     commands:
+        - git config --global user.email "hello@neilellis.me"
+        - git config --global user.name "Neil Ellis"
         - mvn versions:set -DnewVersion=${release}-r${CIRCLE_BUILD_NUM}
         - mvn versions:resolve-ranges
         - mvn versions:lock-snapshots
