Code cleanup, removing superfluous methods.

--- a/circle.yml
+++ b/circle.yml
@@ -44,7 +44,7 @@ deployment:
           - git clean -fd
           - git checkout master
           - git pull origin master
-          - github-changes -o neilellis -r dollar -v  -n ${next_release}
+          - 'github-changes -o neilellis -r dollar -v  -n "In Progress: ${next_release}"'
           - git merge staging -m "Auto merge"
           - git commit -a -m "Change log updates"
           - "git tag ${release} || :"
