--- a/dollar-runtime/pom.xml
+++ b/dollar-runtime/pom.xml
@@ -32,21 +32,26 @@
             <artifactId>dollar-core</artifactId>
             <version>0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>me.neilellis</groupId>
-            <artifactId>dollar-metrics-plugin</artifactId>
-            <version>0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>me.neilellis</groupId>
-            <artifactId>dollar-redis-plugin</artifactId>
-            <version>0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>me.neilellis</groupId>
-            <artifactId>dollar-spark-plugin</artifactId>
-            <version>0-SNAPSHOT</version>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>me.neilellis</groupId>-->
+        <!--<artifactId>dollar-metrics-plugin</artifactId>-->
+        <!--<version>0-SNAPSHOT</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>me.neilellis</groupId>-->
+        <!--<artifactId>dollar-redis-plugin</artifactId>-->
+        <!--<version>0-SNAPSHOT</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>me.neilellis</groupId>-->
+        <!--<artifactId>dollar-socketio-plugin</artifactId>-->
+        <!--<version>0-SNAPSHOT</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>me.neilellis</groupId>-->
+        <!--<artifactId>dollar-spark-plugin</artifactId>-->
+        <!--<version>0-SNAPSHOT</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>me.neilellis</groupId>
             <artifactId>dollar-class-resolver-plugin</artifactId>
