--- a/dollar-docs/pom.xml
+++ b/dollar-docs/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>dollar-runtime</artifactId>
             <version>0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
