--- a/dollar-examples/pom.xml
+++ b/dollar-examples/pom.xml
@@ -66,6 +66,11 @@
             <artifactId>dollar-github-resolver-plugin</artifactId>
             <version>0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
         <!--<dependency>-->
         <!--<groupId>org.slf4j</groupId>-->
         <!--<artifactId>slf4j-nop</artifactId>-->
