--- a/dollar-plugins/dollar-camel-plugin/pom.xml
+++ b/dollar-plugins/dollar-camel-plugin/pom.xml
@@ -31,6 +31,7 @@
             <groupId>me.neilellis</groupId>
             <artifactId>dollar-core</artifactId>
             <version>0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
