--- a/dollar-plugins/dollar-maven-resolver-plugin/pom.xml
+++ b/dollar-plugins/dollar-maven-resolver-plugin/pom.xml
@@ -31,11 +31,15 @@
             <groupId>me.neilellis</groupId>
             <artifactId>dollar-core</artifactId>
             <version>0-SNAPSHOT</version>
+            <scope>provided</scope>
+
         </dependency>
         <dependency>
             <groupId>me.neilellis</groupId>
             <artifactId>dollar-script</artifactId>
             <version>0-SNAPSHOT</version>
+            <scope>provided</scope>
+
         </dependency>
     </dependencies>
 
