--- a/dollar-plugins/dollar-metrics-plugin/pom.xml
+++ b/dollar-plugins/dollar-metrics-plugin/pom.xml
@@ -31,6 +31,8 @@
             <groupId>me.neilellis</groupId>
             <artifactId>dollar-core</artifactId>
             <version>0-SNAPSHOT</version>
+            <scope>provided</scope>
+
         </dependency>
         <dependency>
             <groupId>io.dropwizard.metrics</groupId>
