--- a/dollar-plugins/pom.xml
+++ b/dollar-plugins/pom.xml
@@ -46,6 +46,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <configuration>
+                    <artifactSet>
+                        <!--<excludes>-->
+                        <!--<exclude>me.neilellis.dollar:*</exclude>-->
+                        <!--<exclude>me.neilellis:*</exclude>-->
+                        <!--</excludes>-->
+                    </artifactSet>
                     <shadedArtifactAttached>true</shadedArtifactAttached>
                     <shadedClassifierName>plugin</shadedClassifierName>
                     <!--Change to true if/when http://jira.codehaus.org/browse/MSHADE-174 is fixed -->
