--- a/dollar-script/pom.xml
+++ b/dollar-script/pom.xml
@@ -86,6 +86,10 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.7</version>
         </dependency>
+        <dependency>
+            <groupId>net.kencochrane.raven</groupId>
+            <artifactId>raven</artifactId>
+        </dependency>
 
     </dependencies>
 
