--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,11 @@
                 <artifactId>spark-core</artifactId>
                 <version>2.0.0</version>
             </dependency>
+            <dependency>
+                <groupId>net.kencochrane.raven</groupId>
+                <artifactId>raven</artifactId>
+                <version>4.0</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
