--- a/dollar-examples/pom.xml
+++ b/dollar-examples/pom.xml
@@ -53,6 +53,11 @@
         </dependency>
         <dependency>
             <groupId>me.neilellis</groupId>
+            <artifactId>dollar-mapdb-plugin</artifactId>
+            <version>0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>me.neilellis</groupId>
             <artifactId>dollar-spark-plugin</artifactId>
             <version>0-SNAPSHOT</version>
         </dependency>
