--- a/dollar-core/pom.xml
+++ b/dollar-core/pom.xml
@@ -40,10 +40,6 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
         </dependency>
@@ -84,10 +80,12 @@
         <dependency>
             <groupId>com.jcabi</groupId>
             <artifactId>jcabi-aether</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <artifactId>maven-core</artifactId>
             <groupId>org.apache.maven</groupId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.kohsuke</groupId>
