--- a/dollar-plugins/dollar-github-resolver-plugin/pom.xml
+++ b/dollar-plugins/dollar-github-resolver-plugin/pom.xml
@@ -39,6 +39,15 @@
             <version>0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.jcabi</groupId>
+            <artifactId>jcabi-aether</artifactId>
+        </dependency>
+        <dependency>
+            <artifactId>maven-core</artifactId>
+            <groupId>org.apache.maven</groupId>
+        </dependency>
+
     </dependencies>
 
 
