--- a/dollar-core/pom.xml
+++ b/dollar-core/pom.xml
@@ -77,16 +77,7 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.jcabi</groupId>
-            <artifactId>jcabi-aether</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <artifactId>maven-core</artifactId>
-            <groupId>org.apache.maven</groupId>
-            <scope>provided</scope>
-        </dependency>
+
         <dependency>
             <groupId>org.kohsuke</groupId>
             <artifactId>github-api</artifactId>
@@ -101,9 +92,32 @@
             <artifactId>stateless4j</artifactId>
 
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+        </dependency>
 
 
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.pitest</groupId>
+                <artifactId>pitest-maven</artifactId>
+                <version>1.1.2</version>
+                <configuration>
+                    <targetClasses>
+                        <param>me.neilellis.*</param>
+                    </targetClasses>
+                    <targetTests>
+                        <param>me.neilellis.*</param>
+                    </targetTests>
+                    <mutationThreshold>70</mutationThreshold>
+                    <coverageThreshold>80</coverageThreshold>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
