--- a/dollar-plugins/dollar-class-resolver-plugin/pom.xml
+++ b/dollar-plugins/dollar-class-resolver-plugin/pom.xml
@@ -36,6 +36,12 @@
         </dependency>
         <dependency>
             <groupId>me.neilellis</groupId>
+            <artifactId>dollar-resolver</artifactId>
+            <version>0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>me.neilellis</groupId>
             <artifactId>dollar-script</artifactId>
             <version>0-SNAPSHOT</version>
             <scope>provided</scope>
