--- a/dollar-plugins/dollar-maven-resolver-plugin/pom.xml
+++ b/dollar-plugins/dollar-maven-resolver-plugin/pom.xml
@@ -42,12 +42,9 @@
 
         </dependency>
         <dependency>
-            <groupId>com.jcabi</groupId>
-            <artifactId>jcabi-aether</artifactId>
-        </dependency>
-        <dependency>
-            <artifactId>maven-core</artifactId>
-            <groupId>org.apache.maven</groupId>
+            <groupId>me.neilellis</groupId>
+            <artifactId>dollar-resolver</artifactId>
+            <version>0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
