Incomplete predictive type system.

--- a/dollar-script/pom.xml
+++ b/dollar-script/pom.xml
@@ -91,6 +91,12 @@
             <artifactId>raven</artifactId>
         </dependency>
 
+        <!--<dependency>-->
+        <!--<groupId>org.mapdb</groupId>-->
+        <!--<artifactId>mapdb</artifactId>-->
+        <!--<version>1.0.6</version>-->
+        <!--</dependency>-->
+
     </dependencies>
 
     <repositories>
