--- a/dollar-core/pom.xml
+++ b/dollar-core/pom.xml
@@ -96,7 +96,31 @@
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.orientechnologies</groupId>
+            <artifactId>orient-commons</artifactId>
+            <version>1.7.6</version>
+        </dependency>
+        <dependency>
+            <groupId>com.orientechnologies</groupId>
+            <artifactId>orientdb-core</artifactId>
+            <version>1.7.6</version>
+        </dependency>
+        <dependency>
+            <groupId>com.orientechnologies</groupId>
+            <artifactId>orientdb-graphdb</artifactId>
+            <version>1.7.6</version>
+        </dependency>
+        <dependency>
+            <groupId>com.orientechnologies</groupId>
+            <artifactId>orientdb-server</artifactId>
+            <version>1.7.6</version>
+        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>com.tinkerpop.blueprints</groupId>-->
+        <!--<artifactId>blueprints-core</artifactId>-->
+        <!--<version>2.6.0</version>-->
+        <!--</dependency>-->
 
     </dependencies>
 
