--- a/dollar-examples/pom.xml
+++ b/dollar-examples/pom.xml
@@ -72,6 +72,11 @@
             <version>0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>me.neilellis</groupId>
+            <artifactId>dollar-simple-learner-plugin</artifactId>
+            <version>0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
