--- a/pom.xml
+++ b/pom.xml
@@ -66,8 +66,8 @@
         <module>dollar-resolver</module>
         <module>dollar-plugins</module>
         <module>dollar-runtime</module>
-        <module>dollar-examples</module>
         <module>dollar-script</module>
+        <module>dollar-examples</module>
         <module>dollar-docs</module>
     </modules>
     <dependencyManagement>
@@ -193,6 +193,26 @@
                 <groupId>org.codehaus.jackson</groupId>
                 <artifactId>jackson-mapper-asl</artifactId>
                 <version>1.9.10</version>
+            </dependency>
+            <dependency>
+                <groupId>com.orientechnologies</groupId>
+                <artifactId>orient-commons</artifactId>
+                <version>1.7.6</version>
+            </dependency>
+            <dependency>
+                <groupId>com.orientechnologies</groupId>
+                <artifactId>orientdb-core</artifactId>
+                <version>1.7.6</version>
+            </dependency>
+            <dependency>
+                <groupId>com.orientechnologies</groupId>
+                <artifactId>orientdb-graphdb</artifactId>
+                <version>1.7.6</version>
+            </dependency>
+            <dependency>
+                <groupId>com.orientechnologies</groupId>
+                <artifactId>orientdb-server</artifactId>
+                <version>1.7.6</version>
             </dependency>
 
         </dependencies>
