Disqus on website posts

--- a/dollar-docs/src/main/webapp/_config.yml
+++ b/dollar-docs/src/main/webapp/_config.yml
@@ -4,9 +4,16 @@ email: hello@neilellis.me
 description: > # this means to ignore newlines until "baseurl:"
   DollarScript and the DollarAPI - getting things done on the JVM.
 baseurl: "/dollar/" # the subpath of your site, e.g. /blog/
-url: "http://neilellis.github.io/" # the base hostname & protocol for your site
+url: "http://neilellis.github.io/"
 twitter_username: neilellis
 github_username:  neilellis
 
 # Build settings
 markdown: kramdown
+
+defaults:
+  scope:
+    path: ""
+  values:
+    comments: false
+
