Clean up and extraction of execution to a plugin.

--- a/dollar-plugins/pom.xml
+++ b/dollar-plugins/pom.xml
@@ -42,6 +42,7 @@
         <module>dollar-orientdb-learner-plugin</module>
         <module>dollar-hazelcast-learner-plugin</module>
         <module>dollar-simple-learner-plugin</module>
+        <module>dollar-simple-execution-plugin</module>
     </modules>
 
     <build>
