--- a/dollar-script/pom.xml
+++ b/dollar-script/pom.xml
@@ -63,6 +63,11 @@
             <version>0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>me.neilellis</groupId>
+            <artifactId>dollar-simple-execution-plugin</artifactId>
+            <version>0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.pegdown</groupId>
             <artifactId>pegdown</artifactId>
             <version>1.4.2</version>
