--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright (c) 2014 Neil Ellis
+  ~ Copyright (c) 2014-2015 Neil Ellis
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -399,11 +399,11 @@
                     <includes>
                         <include>**/*Test.java</include>
                     </includes>
-                    <forkCount>8</forkCount>
-                    <reuseForks>true</reuseForks>
-                    <argLine>-Xmx1024m</argLine>
-                    <parallel>methods</parallel>
-                    <threadCount>10</threadCount>
+                    <!--<forkCount>8</forkCount>-->
+                    <!--<reuseForks>true</reuseForks>-->
+                    <!--<argLine>-Xmx1024m</argLine>-->
+                    <!--<parallel>methods</parallel>-->
+                    <!--<threadCount>10</threadCount>-->
                 </configuration>
                 <dependencies>
                     <dependency>
@@ -459,21 +459,21 @@
                     <tag>${project.artifactId}-${project.version}</tag>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-scm-publish-plugin</artifactId>
-                <version>1.0-beta-2</version>
-                <configuration>
-                    <excludes>.DS_Store</excludes>
-                    <checkoutDirectory>${project.build.directory}/scmpublish</checkoutDirectory>
-                    <checkinComment>Publishing Github Website for ${project.version}</checkinComment>
-                    <content>${project.build.directory}/staging</content>
-                    <skipDeletedFiles>false</skipDeletedFiles>
-                    <pubScmUrl>scm:git:git@github.com:neilellis/dollar.git</pubScmUrl>
-                    <scmBranch>gh-pages</scmBranch>
-                    <!-- branch with static site -->
-                </configuration>
-            </plugin>
+            <!--<plugin>-->
+            <!--<groupId>org.apache.maven.plugins</groupId>-->
+            <!--<artifactId>maven-scm-publish-plugin</artifactId>-->
+            <!--<version>1.0-beta-2</version>-->
+            <!--<configuration>-->
+            <!--<excludes>.DS_Store</excludes>-->
+            <!--<checkoutDirectory>${project.build.directory}/scmpublish</checkoutDirectory>-->
+            <!--<checkinComment>Publishing Github Website for ${project.version}</checkinComment>-->
+            <!--<content>${project.build.directory}/staging</content>-->
+            <!--<skipDeletedFiles>false</skipDeletedFiles>-->
+            <!--<pubScmUrl>scm:git:git@github.com:neilellis/dollar.git</pubScmUrl>-->
+            <!--<scmBranch>gh-pages</scmBranch>-->
+            <!--&lt;!&ndash; branch with static site &ndash;&gt;-->
+            <!--</configuration>-->
+            <!--</plugin>-->
 
             <!--Now produce a pretty website on github-->
             <plugin>
@@ -491,12 +491,6 @@
                         <artifactId>maven-fluido-skin</artifactId>
                         <version>1.3.1</version>
                     </dependency>
-                    <!-- Reflow skin requires Velocity >= 1.7  -->
-                    <!--<dependency>-->
-                    <!--<groupId>org.apache.velocity</groupId>-->
-                    <!--<artifactId>velocity</artifactId>-->
-                    <!--<version>1.7</version>-->
-                    <!--</dependency>-->
                 </dependencies>
             </plugin>
             <plugin>
@@ -513,42 +507,12 @@
                     </execution>
                 </executions>
             </plugin>
-
-
-            <!--<plugin>-->
-            <!--<artifactId>kotlin-maven-plugin</artifactId>-->
-            <!--<groupId>org.jetbrains.kotlin</groupId>-->
-            <!--<version>${kotlin.version}</version>-->
-
-            <!--<executions>-->
-            <!--<execution>-->
-            <!--<id>compile</id>-->
-            <!--<phase>process-sources</phase>-->
-            <!--<goals>-->
-            <!--<goal>compile</goal>-->
-            <!--</goals>-->
-            <!--</execution>-->
-
-            <!--<execution>-->
-            <!--<id>test-compile</id>-->
-            <!--<phase>process-test-sources</phase>-->
-            <!--<goals>-->
-            <!--<goal>test-compile</goal>-->
-            <!--</goals>-->
-            <!--</execution>-->
-            <!--</executions>-->
-            <!--</plugin>-->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
                 <version>2.1</version>
             </plugin>
-            <!--<plugin>-->
-            <!--<groupId>org.apache.felix</groupId>-->
-            <!--<artifactId>maven-bundle-plugin</artifactId>-->
-            <!--<version>2.3.6</version>-->
-            <!--<extensions>true</extensions>-->
-            <!--</plugin>-->
+
         </plugins>
     </build>
 
