--- a/dollar-examples/pom.xml
+++ b/dollar-examples/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright (c) 2014 Neil Ellis
+  ~ Copyright (c) 2014-2015 Neil Ellis
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -69,11 +69,6 @@
         <dependency>
             <groupId>me.neilellis</groupId>
             <artifactId>dollar-simple-learner-plugin</artifactId>
-            <version>0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>me.neilellis</groupId>
-            <artifactId>dollar-simple-execution-plugin</artifactId>
             <version>0-SNAPSHOT</version>
         </dependency>
         <dependency>
