--- a/dollar-plugins/dollar-class-resolver-plugin/pom.xml
+++ b/dollar-plugins/dollar-class-resolver-plugin/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright (c) 2014 Neil Ellis
+  ~ Copyright (c) 2014-2015 Neil Ellis
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -47,6 +47,7 @@
             <scope>provided</scope>
 
         </dependency>
+
 
     </dependencies>
 
